--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
    <style>
     .body{
         background-color: #f5f7fb;
+        margin: 0;
+        padding: 0;
+    }
+    .container{
+        display: flex;
+        min-height: 100vh;
+    }
+    .sidebar{
+background-color: pink;
+width: 200px;
+    }
+    .content{
+        background-color:yellow;
+        width: 100%;
     }
    </style>
 </head>
 <body>
-    <div class="sidebar">Menu</div>
-    <div class="contentr">Page Title</div>
+    <div class="container">
+    <div class="sidebar">
+        menu</div>
+    <div class="content"
+    >activity</div>
     </div>
 </body>
 </html>
