home icon added images addded

--- a/index.html
+++ b/index.html
@@ -22,12 +22,31 @@ width: 200px;
         background-color:yellow;
         width: 100%;
     }
+    .menu-item{
+        background-color: #fff;
+        margin: 10px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        padding: 5px 20px;
+        cursor: pointer;
+    }
+    .menu-img{
+        height: 20px;
+    }
+    .menu-text{
+     margin-left: 10px;
+    }
    </style>
 </head>
 <body>
     <div class="container">
     <div class="sidebar">
-        menu</div>
+        <div class="menu-item">
+            <img src="./img/home.png" class="menu-img">
+            <span class="menu-text">home</span>
+        </div>
+    </div>
     <div class="content"
     >activity</div>
     </div>
