--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@ width: 200px;
             <img src="./img/home.png" class="menu-img">
             <span class="menu-text">home</span>
         </div>
+        <div class="menu-item">
+            <img src="./img/airplainmode.png" class="menu-img">
+            <span class="menu-text">airplainmode</span>
+        </div>
+        <div class="menu-item">
+            <img src="./img/bloutooth.png" class="menu-img">
+            <span class="menu-text">bloutooth</span>
+        </div>
+        <div class="menu-item">
+            <img src="./img/sport.png" class="menu-img">
+            <span class="menu-text">sport</span>
+        </div>
+        <div class="menu-item">
+            <img src="./img/setting.png" class="menu-img">
+            <span class="menu-text">setting</span>
+        </div>
+      
     </div>
     <div class="content"
     >activity</div>
