airplanmode  bloutooth home setting sport pages added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ width: 200px;
     .content{
         background-color:yellow;
         width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
     }
     .menu-item{
         background-color: #fff;
@@ -65,7 +67,7 @@ width: 200px;
       
     </div>
     <div class="content"
-    >activity</div>
+    >this is homepage</div>
     </div>
 </body>
 </html>
