pages file added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ width: 200px;
         align-items: center;
         padding: 5px 20px;
         cursor: pointer;
+        text-decoration: none;
+        color: black;
     }
     .menu-img{
         height: 20px;
@@ -44,26 +46,26 @@ width: 200px;
 <body>
     <div class="container">
     <div class="sidebar">
-        <div class="menu-item">
-            <img src="./img/home.png" class="menu-img">
+        <a class="menu-item">
+            <img src="./img/home.png" class="menu-img" href="./index.html">
             <span class="menu-text">home</span>
-        </div>
-        <div class="menu-item">
-            <img src="./img/airplainmode.png" class="menu-img">
+        </a>
+        <a class="menu-item">
+            <img src="./img/airplainmode.png" class="menu-img" href="./pages/airplainmode.html">
             <span class="menu-text">airplainmode</span>
-        </div>
-        <div class="menu-item">
-            <img src="./img/bloutooth.png" class="menu-img">
+        </a>
+        <a class="menu-item">
+            <img src="./img/bloutooth.png" class="menu-img" href="./pages/bloutooth.html">
             <span class="menu-text">bloutooth</span>
-        </div>
-        <div class="menu-item">
-            <img src="./img/sport.png" class="menu-img">
+        </a>
+        <a class="menu-item">
+            <img src="./img/sport.png" class="menu-img " href="./pages/sport.html">
             <span class="menu-text">sport</span>
-        </div>
-        <div class="menu-item">
-            <img src="./img/setting.png" class="menu-img">
+        </a>
+        <a class="menu-item">
+            <img src="./img/setting.png" class="menu-img" href="./pages/setting.html">
             <span class="menu-text">setting</span>
-        </div>
+        </a>
       
     </div>
     <div class="content"
