--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@ width: 200px;
         text-decoration: none;
         color: black;
     }
+    .active-menu{
+        background-color: #ccddff;
+    }
+    .menu-item:hover{
+        background-color: #ccddff;
+    }
     .menu-img{
         height: 20px;
     }
@@ -46,24 +52,24 @@ width: 200px;
 <body>
     <div class="container">
     <div class="sidebar">
-        <a class="menu-item">
-            <img src="./img/home.png" class="menu-img" href="./index.html">
+        <a class="menu-item active-menu" href="./index.html">
+            <img src="./img/home.png" class="menu-img" >
             <span class="menu-text">home</span>
         </a>
-        <a class="menu-item">
-            <img src="./img/airplainmode.png" class="menu-img" href="./pages/airplainmode.html">
+        <a class="menu-item " href="./pages/airplainmode.html">
+            <img src="./img/airplainmode.png" class="menu-img" >
             <span class="menu-text">airplainmode</span>
         </a>
-        <a class="menu-item">
-            <img src="./img/bloutooth.png" class="menu-img" href="./pages/bloutooth.html">
+        <a class="menu-item" href="./pages/bloutooth.html">
+            <img src="./img/bloutooth.png" class="menu-img" >
             <span class="menu-text">bloutooth</span>
         </a>
-        <a class="menu-item">
-            <img src="./img/sport.png" class="menu-img " href="./pages/sport.html">
+        <a class="menu-item" href="./pages/sport.html">
+            <img src="./img/sport.png" class="menu-img " >
             <span class="menu-text">sport</span>
         </a>
-        <a class="menu-item">
-            <img src="./img/setting.png" class="menu-img" href="./pages/setting.html">
+        <a class="menu-item" href="./pages/setting.html">
+            <img src="./img/setting.png" class="menu-img" >
             <span class="menu-text">setting</span>
         </a>
       
