style page added and airplan bloutooth setting sport pages added

--- a/index.html
+++ b/index.html
@@ -4,50 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> assiment20</title>
-   <style>
-    .body{
-        background-color: #f5f7fb;
-        margin: 0;
-        padding: 0;
-    }
-    .container{
-        display: flex;
-        min-height: 100vh;
-    }
-    .sidebar{
-background-color: pink;
-width: 200px;
-    }
-    .content{
-        background-color:yellow;
-        width: 100%;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-    .menu-item{
-        background-color: #fff;
-        margin: 10px;
-        border-radius: 5px;
-        display: flex;
-        align-items: center;
-        padding: 5px 20px;
-        cursor: pointer;
-        text-decoration: none;
-        color: black;
-    }
-    .active-menu{
-        background-color: #ccddff;
-    }
-    .menu-item:hover{
-        background-color: #ccddff;
-    }
-    .menu-img{
-        height: 20px;
-    }
-    .menu-text{
-     margin-left: 10px;
-    }
-   </style>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="container">
