--- a/pages/sport.html
+++ b/pages/sport.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sport page</title>
+    <title>airplain mode </title>
+    <link rel="stylesheet" href="./../css/style.css">
 </head>
 <body>
-    <h1>
-        this is sport page
-    </h1>
+    <div class="container">
+        <div class="sidebar">
+            <a class="menu-item " href="./index.html">
+                <img src="./../img/home.png" class="menu-img" >
+                <span class="menu-text">home</span>
+            </a>
+            <a class="menu-item " href="./pages/airplainmode.html">
+                <img src="./../img/airplainmode.png" class="menu-img" >
+                <span class="menu-text">airplainmode</span>
+            </a>
+            <a class="menu-item" href="./pages/bloutooth.html">
+                <img src="./../img/bloutooth.png" class="menu-img" >
+                <span class="menu-text">bloutooth</span>
+            </a>
+            <a class="menu-item active-menu" href="./pages/sport.html">
+                <img src="./../img/sport.png" class="menu-img " >
+                <span class="menu-text">sport</span>
+            </a>
+            <a class="menu-item" href="./pages/setting.html">
+                <img src="./../img/setting.png" class="menu-img" >
+                <span class="menu-text">setting</span>
+            </a>
+          
+        </div>
+        <div class="content"
+        >this is sport page</div>
+        </div>
 </body>
 </html>
