bottom menu added

--- a/index.html
+++ b/index.html
@@ -31,8 +31,25 @@
         </a>
       
     </div>
-    <div class="content"
-    >this is homepage</div>
+    <div class="content">
+        <h1>this is homepage</h1>
+    </div>
+    <div class="bottom-navigation-bar">
+    <a class="bottom-menu-item" href="./index.html">
+        <img src="./img/home.png " class="bottom-menu-icon bottom-menu-icon-active">
+    </a>
+    <a class="bottom-menu-item" href="./pages/airplainmode.html">
+        <img src="./img/airplainmode.png" class="bottom-menu-icon">
+    </a>
+    <a class="bottom-menu-item " href="./pages/bloutooth.html">
+        <img src="./img/bloutooth.png" class="bottom-menu-icon">
+    </a>
+    <a class="bottom-menu-item" href="./pages/sport.html">
+        <img src="./img/sport.png" class="bottom-menu-icon">
+    </a>
+    <a class="bottom-menu-item" href="./pages/setting.html">
+        <img src="./img/setting.png" class="bottom-menu-icon">
+    </a>
     </div>
 </body>
 </html>
