--- a/pages/sport.html
+++ b/pages/sport.html
@@ -9,15 +9,15 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <a class="menu-item " href="./index.html">
+            <a class="menu-item " href="./../index.html">
                 <img src="./../img/home.png" class="menu-img" >
                 <span class="menu-text">home</span>
             </a>
-            <a class="menu-item " href="./pages/airplainmode.html">
+            <a class="menu-item " href="./../pages/airplainmode.html">
                 <img src="./../img/airplainmode.png" class="menu-img" >
                 <span class="menu-text">airplainmode</span>
             </a>
-            <a class="menu-item" href="./pages/bloutooth.html">
+            <a class="menu-item" href="./../pages/bloutooth.html">
                 <img src="./../img/bloutooth.png" class="menu-img" >
                 <span class="menu-text">bloutooth</span>
             </a>
@@ -25,7 +25,7 @@
                 <img src="./../img/sport.png" class="menu-img " >
                 <span class="menu-text">sport</span>
             </a>
-            <a class="menu-item" href="./pages/setting.html">
+            <a class="menu-item" href="./../pages/setting.html">
                 <img src="./../img/setting.png" class="menu-img" >
                 <span class="menu-text">setting</span>
             </a>
@@ -34,5 +34,22 @@
         <div class="content"
         >this is sport page</div>
         </div>
+        <div class="bottom-navigation-bar">
+            <a class="bottom-menu-item" href="./index.html">
+                <img src="./../img/home.png" class="bottom-menu-icon">
+            </a>
+            <a class="bottom-menu-item" href="./pages/airplainmode.html">
+                <img src="./../img/airplainmode.png" class="bottom-menu-icon">
+            </a>
+            <a class="bottom-menu-item " href="./pages/bloutooth.html">
+                <img src="./../img/bloutooth.png" class="bottom-menu-icon">
+            </a>
+            <a class="bottom-menu-item" href="./pages/sport.html">
+                <img src="./../img/sport.png" class="bottom-menu-icon bottom-menu-icon-active">
+            </a>
+            <a class="bottom-menu-item" href="./pages/setting.html">
+                <img src="./../img/setting.png" class="bottom-menu-icon">
+            </a>
+            </div>
 </body>
 </html>
